--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <form>
         <h2>Inserir nova imagem</h2>
-        <input type="url" id="EnderecoImagemNova" required placeholder="URL da Imagem" />
+        <input type="text" id="EnderecoImagemNova" required placeholder="digite o novo conteúdo" />
         <button type="submit" id="BotaoAdicionar">Adicionar</button>
         <button type="reset" id="BotaoCancelar">Cancelar</button>
     </form>
